Anabasis.Deployment.Tests/data/expected-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    group: testgroup
  name: namespace-testgroup
