Anabasis.Deployment.Tests/data/expected-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: test
    group: testgroup
  name: ingress-test
  namespace: testgroup
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: svc-test
            port:
              name: http
        path: /trades/V1
        pathType: ImplementationSpecific
